--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="Scripts/lib/angular/angular.js"></script>
     <script type="text/javascript" src="Scripts/lib/angular-ui/angular-ui.js"></script>
     <script type="text/javascript" src="Scripts/modules/localizationservice.js"></script>
+    <script type="text/javascript" src="Scripts/modules/i18ntranslationfilter.js"></script>
     <script type="text/javascript" src="Scripts/app/app.js"></script>
     <script type="text/javascript" src="Scripts/app/AppController.js"></script>
     <script type="text/javascript" src="Scripts/app/HomeController.js"></script>
@@ -20,9 +21,9 @@
     <script type="text/javascript" src="Scripts/app/EditPersonController.js"></script>
 </head>
 <body ng-controller="AppController">
-    <H1 ng-bind="getLocalizedString('_HomeTitle_')"></H1>
+    <H1 ng-bind="'_HomeTitle_' | i18n"></H1>
 
-    <div ng-bind="getLocalizedString('_Greeting_')"></div>
+    <div ng-bind="'_Greeting_' | i18n"></div>
     <div ng-view></div>
 </body>
 </html>
