--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -8,14 +8,16 @@
     <link rel="stylesheet" type="text/css" href="components/jasmine/jasmine.css">
     <script type="text/javascript" src="components/jasmine/jasmine.js"></script>
     <script type="text/javascript" src="components/jasmine/jasmine-html.js"></script>
+    <script type="text/javascript" src="../app/components/angular/angular.js"></script>
+    <script type="text/javascript" src="../app/components/angular/angular-mocks.js"></script>
 
     <!-- include spec files here... -->
-    <script type="text/javascript" src="spec/SpecHelper.js"></script>
-    <script type="text/javascript" src="spec/PlayerSpec.js"></script>
+    <script type="text/javascript" src="specs/localization-service-unit-test.js"></script>
+    <script type="text/javascript" src="specs/localization-filter-unit-test.js"></script>
+    <script type="text/javascript" src="specs/localization-directives-unit-test.js"></script>
 
     <!-- include source files here... -->
-    <script type="text/javascript" src="src/Player.js"></script>
-    <script type="text/javascript" src="src/Song.js"></script>
+    <script type="text/javascript" src="../src/localize.js"></script>
 
     <script type="text/javascript">
         (function () {
